// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TodoItem /> Should render and match the snapshot 1`] = `
<div
  id="todo-1"
>
  <button
    data-testid="todo-1"
    type="button"
  >
    One item
  </button>
  <div
    class="Checkbox-eu7a0t-0 hmJxlM"
    data-testid="toggle-1"
    role="button"
    type="button"
  />
  <button
    data-testid="delete-1"
    src="/false"
    type="button"
  />
</div>
`;

exports[`<TodoItem /> Should render and match the snapshot when done is true 1`] = `
<div
  id="todo-1"
>
  <input
    data-testid="editInput-1"
    type="text"
    value="One item"
  />
  <div
    class="Checkbox-eu7a0t-0 hmJxlM"
    data-testid="toggle-1"
    role="button"
    type="button"
  />
  <button
    data-testid="delete-1"
    src="/true"
    type="button"
  />
</div>
`;

exports[`<TodoItem /> Should render and match the snapshot when focused is true 1`] = `
<div
  id="todo-1"
>
  <input
    data-testid="editInput-1"
    type="text"
    value="One item"
  />
  <div
    class="Checkbox-eu7a0t-0 hmJxlM"
    data-testid="toggle-1"
    role="button"
    type="button"
  />
  <button
    data-testid="delete-1"
    src="/true"
    type="button"
  />
</div>
`;
